# dbramwell.github.io

./: .env.example  .gitignore  README.md  asset-manifest.json  david_bramwell_cv.docx  docker-compose.yml  index.html  package.json  precache-manifest.12c9e27bce81e332c7dd468e58f09263.js  precache-manifest.310fcea27105be5b72835cadc3eb7221.js  precache-manifest.4717a028461de3891d2f6768768d013e.js  precache-manifest.5f2ad42223762d20ab51b5fb8e8c9cd6.js  precache-manifest.69cd94e760509fcdde41d72bc8ce5f22.js  precache-manifest.7a402d50cca24f4be4f6354157358535.js  precache-manifest.9ce3e5215d3b65a2033a3441070894a3.js  precache-manifest.a353044eb9e06ef7911e0b93acadd929.js  precache-manifest.a87adf1a4401dca133e5e8eead59350c.js  precache-manifest.bb4c1c68c40d8f676ecf89fbe15591d9.js  precache-manifest.c7f859dee929e9244b5a0890ef1fb436.js  precache-manifest.d5d0a6b65215442eeecf7fb626eef57c.js  precache-manifest.d7a8f63263d86017cc50c28eb46a536e.js  precache-manifest.e04d64d891ef763268e53eb2a0074b59.js  precache-manifest.e11cfb1e22fec851bf91913691e52a45.js  precache-manifest.e78bcb9b96a72ac19e73b87d8d058aac.js  service-worker.js
amplify/: team-provider-info.json
api/: Dockerfile  main.py  models.py  pyproject.toml  utils.py
css/: app.1d5e6596.css  app.58c4d51b.css  app.9a4456c5.css  app.9cf61a50.css  app.db561ed8.css  app.f6f003ff.css  chunk-vendors.cfb91f04.css
frontend-vue/: Dockerfile  build.sh  david_bramler_cv.docx  (+4 more)
infra/: Dockerfile  app.py  deploy-live.sh  deploy.sh  pyproject.toml
infra/src/: development_stack.py  production_stack.py
scheduled_jobs/: github.py  github_queries.py  pyproject.toml  stackoverflow.py
scheduled_jobs/common/: s3.py  ssm.py
(+161 files in other folders)
