[tool.poetry]
name = "github"
version = "0.1.0"
description = ""
authors = ["David Bramwell <david.j.bramwell@googlemail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "2.26.0"
boto3 = "^1.18.48"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
